Fixed icons in quick links page and spacing for projects page.

--- a/InfiniteLoop/CSS/tooplate-infinite-loop.css
+++ b/InfiniteLoop/CSS/tooplate-infinite-loop.css
@@ -432,7 +432,7 @@ blockquote {
 
 .grid figure h2,
 .grid figure p {
-  margin: 25px;
+  margin: 0px;
 }
 
 .grid figure p {
